--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
-    "bsv": "^2.0.5",
     "glob": "^7.1.6",
     "lodash": "=4.17.11",
     "log4js": "^6.3.0",
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
+    "request": "^2.88.2",
     "scryptlib": "=0.2.27",
     "watch": "^1.0.2",
     "whatsonchain": "^0.2.0"
