--- a/config.json
+++ b/config.json
@@ -4,13 +4,15 @@
     "apiTarget": "whatsonchain",
     "issueSatoshis": 23000,
     "transferSatoshis": 23000,
-    "fee": 5000
+    "fee": 5000,
+    "contract_jsons_path": "./contract_jsons"
   },
   "test": {
     "wif": "cVquiv4mPG76Co7naxFrDahcwtQ8gMNDyiHQ5DbQGfCiQTGzu2Wb",
     "apiTarget": "whatsonchain",
     "issueSatoshis": 1000,
     "transferSatoshis": 1000,
-    "fee": 5000
+    "fee": 5000,
+    "contract_jsons_path": "./contract_jsons"
   }
 }
