补充脚本编译命令

--- a/config.json
+++ b/config.json
@@ -4,15 +4,13 @@
     "apiTarget": "whatsonchain",
     "issueSatoshis": 23000,
     "transferSatoshis": 23000,
-    "fee": 5000,
-    "contract_jsons_path": "./contract_jsons"
+    "fee": 5000
   },
   "test": {
     "wif": "cVquiv4mPG76Co7naxFrDahcwtQ8gMNDyiHQ5DbQGfCiQTGzu2Wb",
     "apiTarget": "whatsonchain",
     "issueSatoshis": 1000,
     "transferSatoshis": 1000,
-    "fee": 5000,
-    "contract_jsons_path": "./contract_jsons"
+    "fee": 5000
   }
 }
